k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quickapp
  labels:
    app.kubernetes.io/name: quickapp
    app.kubernetes.io/part-of: quickapp
