k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickapp
  namespace: quickapp
  labels:
    app.kubernetes.io/name: quickapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quickapp
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
